# partner-vault

./: .gitignore  LICENSE.txt  README.md  database.types.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  report.rs
src/component/: CreatePartnerModal.tsx  CreateTagModal.tsx  EditPartnerModal.tsx  EditTagModal.tsx  Footer.tsx  HelpModal.tsx  LoginWrapper.tsx  Modal.tsx  PartnerModals.tsx  TagModals.tsx  TeamWrapper.tsx  Toggle.tsx  TransitionWrapper.tsx
src/components/: auth-login-form.tsx  auth-signup-form.tsx  color-mode-toggle.tsx  dashboard-nav.tsx  dashboard-top-bar.tsx  help.tsx  logout-button.tsx  profile-creation-form.tsx  search.tsx  suspense-spinner.tsx  transition-wrapper.tsx
src/components/dialog/: help.tsx  invites.tsx  profile-creation.tsx
src/components/partner/: partner-create.tsx  partner-dropdown.tsx  partner-update-mobile.tsx  partner-update.tsx  partner-view-mobile.tsx  partner-view.tsx
src/components/tags/: tag-create.tsx  tag-dropdown.tsx  tag-update-mobile.tsx  tag-update.tsx  tag-view-mobile.tsx  tag-view.tsx
src/components/teams/: invites.tsx  team-creation.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  pagination.tsx  select.tsx  textarea.tsx  toast.tsx
src/lib/: Color.tsx  Contact.tsx  Database.tsx  DateUtil.tsx  Modal.tsx  Partners.tsx  RouteData.tsx  Tags.tsx  Teams.tsx  User.tsx  filter.ts  sort.ts  team-data.tsx  utils.ts  view.ts
src/lib/database/: database.ts  (+1 more)
src/page/: Dashboard.tsx  Login.tsx  Partners.tsx  Reports.tsx  Settings.tsx  SignUp.tsx  Tags.tsx  Teams.tsx  Users.tsx
src/routes/: create-profile.tsx  index.tsx  login.tsx  teams.tsx
supabase/: config.toml
(+12 files in other folders)
