[package]
name = "partner-vault"
version = "0.0.2"
description = "Store partner information with Partner Vault"
authors = ["oglass"]
license = "GPL-3"
repository = "https://github.com/oglassdev/partner-vault"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-http = "2.0.0-beta.3"
tauri-plugin-process = "2.0.0-beta.3"
tauri-plugin-clipboard-manager = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.0.0-beta.3"
